<resources>
    <string name="app_name">OSI Model</string>
    <string name="tv_submit">Submit</string>
    <string name="skipText">Skip</string>
    <string name="submitText">Submit</string>
    <string name="hint_welcome">Welcome</string>
    <string name="hint_email">Enter Your Email</string>
    <string name="hint_name">Enter Your Name</string>
    <string name="welcome_text">\nStay Connected with Lionheartapps.\n Subscribe to latest newsletter, android updates and much more!</string>
    <string name="banner_ad_unit_id">ca-app-pub-5779379636400753/5687102629</string>
    <string name="native_ad_unit_id">ca-app-pub-5779379636400753/2184983020</string>
    <string name="reward_ad_unit_id"> ca-app-pub-5779379636400753/5361614623</string>
    <string name="inter_ad_unit_id">ca-app-pub-5779379636400753/2354873020</string>
    <string name="native_large_ad_unit_id">ca-app-pub-5779379636400753/1924286620</string>
    <string name="app_id">ca-app-pub-5779379636400753~4210369422</string>
    <string-array name="themes">
        <item>Blue</item>
        <item>Dark</item>
        <item>Green</item>
    </string-array>
    <string name="def_theme">Blue</string>
    <string name="theme_background">Background</string>
    <string name="theme_summary">Select Background</string>
    <string name="theme_dialog_title">Background </string>
    <string name="vb_name">Vibration Control</string>
    <string name="vb_summaryOn">On</string>
    <string name="vb_summaryOff">Off</string>
    <string name="vb_title">Vibrate On press</string>
    <string name="Vi_name">Version Info</string>
    <string name="vi_summary">version</string>
    <string name="vi_title">Latest version</string>
    <string name="legal">Legal</string>
    <string name="pp_name">Privacy Policy</string>
    <string name="pp_summary">Read the policy</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Problems?</string>
    <string name="feed_contact_summary">Email- lionheartapps.rk@gmail.com</string>
    <string name="rate_us">Like OSI Model?</string>
    <string name="rate_summary">Rate it in the Play Store</string>
    <string name="other">Other</string>
    <string name="moreapps">More Apps</string>
    <string name="moreapps_summary">Download the other apps </string>
    <string name="share">Share This Apps</string>
    <string name="share_summary">Share it with your friends</string>
    <string name="about_me">Hi, I am Krunal Rana.</string>
    <string name="about_app">I tried my best to create this app user friendly. I hope you enjoy it . If you have a problem or suggestion related to this app then please send me feedback. All feedbacks and comments are welcome..</string>
    <string name="about_app_free">I created this app for education purpose for free.</string>
    <string name="action_settings">Settings</string>
    <string name="action_welcome">Welcome</string>
    <string name="action_about">About</string>
    <string name="title">Open System Interconnection \n(OSI) Model</string>
    <string name="osiBtn">OSI Model</string>
    <string name="tcpBtn">TCP/IP Model</string>
    <string name="moreStuffsBtn">More Stuffs</string>
    <string name="figureBtn">Figures</string>
    <string name="osiLayers">OSI Model Layers</string>
    <string name="tcpLayers">TCP/IP Model Layers</string>
    <string name="unknown">Unknown</string>
    <string name="introduction">Introduction</string>
    <string name="application">Application Layer</string>
    <string name="presentation">Presentation Layer</string>
    <string name="session">Session Layer</string>
    <string name="transport">Transport Layer</string>
    <string name="network">Network Layer</string>
    <string name="datalink">Datalink Layer</string>
    <string name="physical">Physical Layer</string>
    <string name="applicationBtn">7. Application Layer</string>
    <string name="presentationBtn">6. Presentation Layer</string>
    <string name="sessionBtn">5. Session Layer</string>
    <string name="transportBtn">4. Transport Layer</string>
    <string name="networkBtn">3. Network Layer</string>
    <string name="datalinkBtn">2. Datalink Layer</string>
    <string name="physicalBtn">1. Physical Layer</string>
    <string name="tcp_applicationTcp">4. Application Layer</string>
    <string name="tcp_transportTcp">3. Transport Layer</string>
    <string name="tcp_internetTcp">2. Internet Layer</string>
    <string name="tcp_linkTcp">1. Link/Network Interface Layer</string>
    <string name="transportTcp">Transport Layer</string>
    <string name="applicationTcp">Application Layer</string>
    <string name="internetTcp">Internet Layer</string>
    <string name="linkTcp">Link/Network Interface Layer</string>
    <string name="more_cmdBtn">Commands</string>
    <string name="more_ipBtn">IP Address</string>
    <string name="more_tcpudpBtn">TCP vs. UDP</string>
    <string name="more_ipvBtn">IPv4 vs. IPv6</string>
    <string name="more_ieeeBtn">IEEE 802 Standards</string>
    <string name="more_conceptsBtn">Concepts</string>
    <string name="more_fullformsBtn">Full Forms</string>
    <string name="model_protocol">Protocols</string>
    <string name="model_devices">Devices</string>
    <string name="model_tech">Technology</string>
    <string name="osi_intro">•	OSI model was invented and published by ISO (International Organization for Standardization) in 1984.\n\n•	OSI model was developed to eliminate hardware, software and platform dependencies.\n\n•	OSI model can be used to understand data processing between systems.\n\n•	OSI model has layered architect.
        \n\n•	OSI model has 7 layers and each layer has unique function.\n\n•	Each layer has a process for data and it produces a final product, which is passed to its next layer that final product is called PDU (Protocol Data Unit).</string>
    <string name="osi_app">•	User starts communication from this layer using application or software. (ex.- Browser, E-mail client, etc.)\n\n•	It provides network services to application process.
    \n\n•	Provides user interface.\n\n•	Provides authentication.\n\n•	PDU >>> DATA</string>
    <string name="osi_app_protocol">\nHTTP – Hypertext Transfer Protocol  \n(Port No :- 80/TCP)\n\n	HTTPS – Hypertext Transfer Protocol Secure \n(Port No :- 443/TCP)\n\n	TELNET – Terminal Network  (\nPort No :- 23/TCP)\n\n	SSH – Secure Shell \n(Port No :-22/TCP)\n\n	FTP – File Transfer Protocol \n (Port No :- 20/21/TCP)\n\n	RDP – Remote Desktop Protocol\n(Port No :- 3389/UDP)
\n\n	TFTP – Trivial File Transfer Protocol  \n(Port No :- 69/UDP)\n\n	DHCP – Dynamic Host Configuration Protocol  \n(Port No :- 67/68/UDP)\n\n	DNS – Domain Name Service  \n(Port No :- 53/TCP/UDP)\n\n	SNMP – Simple Network Management Protocol  \n(Port No :- 161/162/TCP)\n\n	SMTP –Simple Mail Transfer Protocol  \n(Port No :- 25/TCP)
\n\n	POP3 – Post Office Protocol  \n(Port No :- 110/TCP)\n\n	IMAP – Internet Message Access Protocol  \n(Port No :- 143/TCP)\n\n	NTP – Network Time Protocol  \n(Port No :- 123/TCP)
        \n\n	LDAP – Light weight Directory Access Protocol \n (Port No :- 389/TCP)</string>
    <string name="osi_present">•	Translate the data in machine language (ASCII, EBCDIC).\n\n•	Encrypt the data.\n\n•	Compress the data.\n\n•	PDU >>> DATA</string>
    <string name="osi_ses">•	Start, maintains and terminate the session between hosts.\n\n•	Select the best path and managed it (half duplex, full duplex).\n\n•	Create a checkpoint to check session gets lost in between data transmission or not.
             \n\n•	PDU >>> DATA</string>
    <string name="osi_ses_protocol">RPC – Remote Procedure Call\n(Port No: - 135/TCP/UDP)\n\nNETBIOS – Network Basic Input /Output System\n(Port No: - 137/138/UDP)\n\nSIP – Session Initiation Protocol\n(Port No: - 5060/5061/TCP/UDP)
            \n\nRTP – Real Time Transport Protocol\n(Port No: -  16384-32767/UDP)</string>
    <string name="osi_trans">•	Acknowledgement messages and sequence numbers.\n\n•	Use Segmentation Process: - Break messages from session layer into segment format.\n\n•	Ensuring reliable data delivery.
            \n\n•	PDU >>> SEGMENT</string>
    <string name="osi_trans_protocol">UDP – User Diagram Protocol \n\nTCP – Transfer Control Protocol </string>
    <string name="osi_net">•	Finds the best path for the packet to reach to the destination.\n\n•	Fragmenting packets.\n\n•	It is responsible for source to destination delivery.\n\n•	It controls the Flow (regulating the speed of data transfer) and Error (detection of transmission error).
        \n\n•	PDU >>> PACKET</string>
    <string name="osi_net_protocol">IP – Internet Protocol \n\nICMP – Internet Control Message Protocol\n\nIGMP – Interior Gateway Protocol \n\nNAT – Network Address Translation \n\nOSPF – Open Shortest Path First </string>
    <string name="osi_net_devices">Router, Multilayer Switch, Firewall </string>
    <string name="osi_datalink">•	Encapsulation of incoming and outgoing data as frames.\n\n•	Network interface hardware addressing.\n\n•	It is responsible for node to node delivery.
        \n\n•	It uses a CRC (Cyclic Redundancy Checks) to detect error.\n\n•	PDU >>> FRAME
        \n\n\n•	It divided in two sub-layer according to its functions.\n\no	MAC (Media Access Control): – This sub-layer defines the way in which multiple network adapters share a single transmission medium.\n\no	LLC (Logical Link): – This sub-layer is responsible for establishing and maintaining a link between communicating devices for transmission of frames. </string>
    <string name="osi_datalink_protocol">ARP – Address Resolution Protocol \n\nPPP – Point to Point Protocol\n\nPPTP – Point to Point Tunneling Protocol \n\nL2TP – Layer 2 Tunneling Protocol\n\nHDLC – High level Data Link Control</string>
    <string name="osi_datalink_devices">Bridge, NIC card, Switch</string>
    <string name="osi_phy">•	Convert digital data into analog signals.\n\n•	Network interface hardware.\n\n•	PDU >>> BITS</string>
    <string name="osi_phy_tech">DSL, SONET, etc</string>
    <string name="osi_phy_devices">Cable, Connector, Hub, Modem, Repeater</string>
    <string name="tcp_intro">•	It was made by U.S D.O.D.\n\n•	Practically this model was used globally by all vendors.\n</string>
    <string name="tcp_app">•	This layer at which many TCP/IP services can be run such as FTP, HTTP and SMTP.
    \n\n•	UNIX like applications interface with the TCP/IP application protocols using an APPLICATION PROGRAMMING INTERFACE (API) called Berkeley Socket Interface.
    \n\n•	A similar version of this was created for windows and it is generally referred to as WINSOCK.
    \n\n•	This interface allows programmer to call functions of TCP/IP application protocols in software applications such as a web browser or FTP client.</string>
    <string name="tcp_trans">•	The transport layer provides communication between the source and destination computers and breaks application layer information into packets.
    \n\n•	TCP/IP provides two methods of data delivery.
    \n\n1.	Connection oriented delivery using the TRANSMISSION CONTROL PROTOCOL (TCP).
    \n\n2.	Connectionless delivery using USER DATAGRAM PROTOCOL (UDP).</string>
    <string name="tcp_internet">•	The internet layer provides addressing and routing functions.
    \n\n•	It uses number of protocols (Internet protocol [IP], Address Resolution Protocol [ARP] ) to ensure the delivery of packets.</string>
    <string name="tcp_link">•	Link layer is the equivalent of the OSI physical and data link layer as it defines the host’s connection to the network.
    \n\n•	This layer compromises the hardware and software involved in the interchange of frames between computers.
    \n\n•	Technology used is : LAN based(Ethernet or WIFI) or WAN based (ISDN, DSL).</string>
    <string name="osi">OSI</string>
    <string name="tcp">TCP\\IP</string>
    <string name="osi_flowchart">OSI Flowchart</string>
    <string name="cmd_title">Basic Networking Commands</string>
</resources>