<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welcomeBg"
    tools:context=".Welcome">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome"
            style="@style/heading_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:hint="@string/hint_welcome"
            android:paddingTop="8dp"
            android:paddingBottom="10dp"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:hint="Thank You"
            android:text="@string/welcome_text"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="italic"
            android:typeface="monospace" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="6dp">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEdT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="3dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textWebEmailAddress"
                    android:maxLines="1"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_save"
                style="@style/button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:text="@string/tv_submit" />
        </LinearLayout>

        <TextView
            android:id="@+id/skipTv"
            style="@style/main_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/skipText"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/userDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/skipTv"
            android:orientation="vertical">

            <TextView
                android:id="@+id/excitedTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:hint=""
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>