<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/textView"
            style="@style/heading_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="1dp"
            android:text="@string/title"
            android:textSize="16sp" />


        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_weight="1"
            android:fillViewport="true"
            android:paddingBottom="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical"
                android:padding="5dp">


                <ImageView
                    android:id="@+id/imgView1"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/osi4" />


                <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/moreBtn"
                        style="@style/main_button_text"
                        android:layout_width="170dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/left"
                        android:text="@string/moreStuffsBtn" />

                    <Button
                        android:id="@+id/osiBtn"
                        style="@style/main_button_text"
                        android:layout_width="170dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/right"
                        android:text="@string/osiBtn" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/tcpBtn"
                        style="@style/main_button_text"
                        android:layout_width="170dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/left2"
                        android:text="@string/tcpBtn" />

                    <Button
                        android:id="@+id/figuresBtn"
                        style="@style/main_button_text"
                        android:layout_width="170dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/right2"
                        android:text="@string/figureBtn" />

                </LinearLayout>

            </LinearLayout>


        </ScrollView>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>